(Good) font alignment fixes

--- a/templates/fontawesome-style.css
+++ b/templates/fontawesome-style.css
@@ -12,14 +12,12 @@
 .<%= className %> {
   display: inline-block;
   font: normal normal normal 14px/1 "<%= fontName %>";
-  font-size: inherit;
+  font-size: 1.125em;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transform: translate(0, 0);
 }
-.<%= className %>::before { vertical-align: middle; } /* fix for alignment issue */
-.<%= className %>.ds { vertical-align: middle; }
 .<%= className %>-lg {
   font-size: 1.3333333333333333em;
   line-height: 0.75em;
